Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17571

Crash when adding Qt version to kit

    XMLWordPrintable

Details

    Description

      1. Have a Qt version in PATH.
      2. Start Creator with empty settings, e.g. by passing -settingspath <empty directory>.
      3. Go to "Tools" -> "Options..." -> "Build & Run" -> "Kits".
        There is a kit "Desktop" which uses the Qt version in PATH.
      4. Clone this kit.
      5. In the cloned kit, set the Qt version to "none".
      6. Click "OK".
      7. Open qtcreator.pro from Creator's repository.
        You'll see the "Configure Project" screen.
      8. Go to "Tools" -> "Options..." -> "Build & Run" -> "Kits".
      9. In the cloned kit, set the Qt version to the one in PATH.
      10. Click "OK".
        Creator crashes:
        1   ProjectExplorer::Project::document                                                                                                                                                                                                                                                                                                                                                project.cpp         141  0x7fffdb4e4604 
        2   ProjectExplorer::Project::projectFilePath                                                                                                                                                                                                                                                                                                                                         project.cpp         147  0x7fffdb4e4644 
        3   QmakeProjectManager::QmakeProject::matchesKit                                                                                                                                                                                                                                                                                                                                     qmakeproject.cpp    1523 0x7fffc80a00b3 
        4   QmakeProjectManager::QmakeProject::<lambda(const ProjectExplorer::Kit *)>::operator()(const ProjectExplorer::Kit *) const                                                                                                                                                                                                                                                         qmakeproject.cpp    276  0x7fffc8096516 
        5   std::_Function_handler<bool(const ProjectExplorer::Kit *), QmakeProjectManager::QmakeProject::QmakeProject(QmakeProjectManager::QmakeManager *, const QString&)::<lambda(const ProjectExplorer::Kit *)>>::_M_invoke(const std::_Any_data &, <unknown type in /home/qtrob/dev/g++-6.2.0/creator-4.2-d/lib/qtcreator/plugins/libQmakeProjectManager.so, CU 0x192c10, DIE 0x21db96>) functional          1726 0x7fffc80a14be 
        6   std::function<bool (ProjectExplorer::Kit const *)>::operator()(ProjectExplorer::Kit const *) const                                                                                                                                                                                                                                                                                functional          2136 0x7fffdb42ac27 
        7   ProjectExplorer::KitMatcher::matches                                                                                                                                                                                                                                                                                                                                              kitmanager.h        118  0x7fffdb429e8b 
        8   ProjectExplorer::TargetSetupPage::addWidget                                                                                                                                                                                                                                                                                                                                       targetsetuppage.cpp 517  0x7fffdb42917e 
        9   ProjectExplorer::TargetSetupPage::handleKitUpdate                                                                                                                                                                                                                                                                                                                                 targetsetuppage.cpp 375  0x7fffdb42842d 
        10  QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<ProjectExplorer::Kit *>, void, void (ProjectExplorer::TargetSetupPage:: *)(ProjectExplorer::Kit *)>::call                                                                                                                                                                                                       qobjectdefs_impl.h  141  0x7fffdb42e294 
        11  QtPrivate::FunctionPointer<void (ProjectExplorer::TargetSetupPage:: *)(ProjectExplorer::Kit *)>::call<QtPrivate::List<ProjectExplorer::Kit *>, void>                                                                                                                                                                                                                              qobjectdefs_impl.h  160  0x7fffdb42e0d7 
        12  QtPrivate::QSlotObject<void (ProjectExplorer::TargetSetupPage:: *)(ProjectExplorer::Kit *), QtPrivate::List<ProjectExplorer::Kit *>, void>::impl                                                                                                                                                                                                                                  qobject_impl.h      120  0x7fffdb42d851 
        13  QtPrivate::QSlotObjectBase::call                                                                                                                                                                                                                                                                                                                                                  qobject_impl.h      101  0x7ffff64b2d6f 
        14  QMetaObject::activate                                                                                                                                                                                                                                                                                                                                                             qobject.cpp         3723 0x7ffff64af94d 
        15  QMetaObject::activate                                                                                                                                                                                                                                                                                                                                                             qobject.cpp         3602 0x7ffff64af24e 
        16  ProjectExplorer::KitManager::kitUpdated                                                                                                                                                                                                                                                                                                                                           moc_kitmanager.cpp  278  0x7fffdb686f06 
        17  ProjectExplorer::KitManager::notifyAboutUpdate                                                                                                                                                                                                                                                                                                                                    kitmanager.cpp      443  0x7fffdb45eba3 
        18  ProjectExplorer::Kit::kitUpdated                                                                                                                                                                                                                                                                                                                                                  kit.cpp             674  0x7fffdb437ea5 
        19  ProjectExplorer::Kit::unblockNotification                                                                                                                                                                                                                                                                                                                                         kit.cpp             198  0x7fffdb4346e1 
        20  ProjectExplorer::KitGuard::~KitGuard                                                                                                                                                                                                                                                                                                                                              kit.h               154  0x7fffdb41c16d 
        ... <Mehr>
        

      Creator should not crash.

      Attachments

        1. backtrace.txt
          94 kB
          Robert Löhning
        For Gerrit Dashboard: QTCREATORBUG-17571
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes