ProjectExplorer: Do not leak targetsetuppages

Leaving these around can lead to a crash when updating a kit after the
project has been closed.

Task-number: QTCREATORBUG-17571
Change-Id: Ie4be99a665b072f3c920e3f365f5b20949436850
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>